# myOpenCV

./: README.md
pro_1/: CMakeLists.txt  ex2_1.h  main.cpp
pro_2/: main.cpp  readme.txt
